# bossa

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  Makefile  README.md  dprint.json  justfile  lefthook.yml
.cargo/: config.toml
.github/: dependabot.yml  release.yml
.github/actions/release-notes/: action.yml
.github/workflows/: ci.yml  docs.yml  nightly.yml  release.yml
crates/: BUILD.bazel
crates/brewkit/: BUILD.bazel  Cargo.toml
crates/brewkit/src/: audit.rs  bundle.rs  error.rs  lib.rs  retry.rs  types.rs
crates/brewkit/src/backend/: brew.rs  mod.rs
crates/brewkit/src/brewfile/: mod.rs  parser.rs  writer.rs
crates/declarative/: BUILD.bazel  Cargo.toml  README.md
crates/declarative/src/: context.rs  diff.rs  executor.rs  lib.rs  planner.rs  resource.rs  types.rs
crates/icloud/: BUILD.bazel  Cargo.toml  HANDOFF.md  README.md
crates/icloud/examples/: evict.rs  status.rs
crates/icloud/src/: error.rs  lib.rs  types.rs
crates/icloud/src/backend/: brctl.rs  mod.rs
crates/manifest/: BUILD.bazel  Cargo.toml  README.md
crates/manifest/src/: error.rs  lib.rs  types.rs
crates/termkit/: BUILD.bazel  Cargo.toml
crates/termkit/src/: format.rs  layout.rs  lib.rs  messages.rs  progress.rs
crates/toolchain/: BUILD.bazel  Cargo.toml
crates/toolchain/examples/: install_buck2.rs
crates/toolchain/src/: error.rs  lib.rs  platform.rs  types.rs
crates/toolchain/src/backend/: github.rs  mod.rs
crates/toolchain/src/tools/: buck2.rs  mod.rs
docs/: book.toml
docs/plans/: DECLARATIVE_CONFIG_GENERATION.md  LOCATION_MANAGEMENT_FEATURE.md
docs/src/: README.md  SUMMARY.md
docs/src/advanced/: caching.md  declarative.md
docs/src/getting-started/: installation.md  quickstart.md
docs/src/guide/: brew.md  collections.md  configuration.md  icloud.md  nova.md  storage.md
docs/src/reference/: cli.md  config-files.md  environment.md
packaging/deb/: control.in
packaging/homebrew/: bossa-nightly.rb.in  bossa.rb.in
packaging/rpm/: bossa.spec.in
src/: cli.rs  config.rs  main.rs  paths.rs  progress.rs  runner.rs  schema.rs  state.rs  sudo.rs  ui.rs
src/commands/: brew.rs  caches.rs  cellar.rs  collections.rs  config.rs  configs.rs  crud.rs  declarative.rs  defaults.rs  doctor.rs  dotfiles.rs  dotfiles_reconcile.rs  icloud.rs  locations.rs  manifest.rs  migrate.rs  mod.rs  nova.rs  refs.rs  relocate.rs  status.rs  storage.rs  stow.rs  sync.rs  t9.rs  theme.rs  tools.rs  workspace.rs  worktree.rs
src/commands/disk/: backup.rs  mod.rs  plist.rs  repartition.rs  status.rs
src/commands/storage/: collectors.rs  disk.rs  display.rs  duplicates.rs  mod.rs  types.rs
src/engine/: differ.rs  executor.rs  mod.rs  planner.rs
src/generators/: git.rs  mod.rs
src/resource/: brew_package.rs  dock.rs  file_handler.rs  gh_extension.rs  macos_default.rs  mod.rs  pnpm_package.rs  service.rs  symlink.rs  vscode_extension.rs
src/scanner/: mod.rs  shell.rs
tools/lint/: ghalint.yaml  pinact.yaml
tools/scripts/: BUILD.bazel  install-local.sh  install.ps1  install.sh
