[package]
name = "bossa"
version = "0.1.0"
authors = ["Alberto Cavalcante"]
edition = "2024"
license = "MIT"
repository = "https://github.com/albertocavalcante/bossa"
rust-version = "1.85"
description = "Unified CLI for managing dev environment - workspaces, refs, packages"

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Terminal UI
colored = "3"
console = "0.16"
dialoguer = "0.11"
indicatif = "0.18"
similar = "2.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Paths and directories
dirs = "6"

# Shell expansion
shellexpand = "3"

# Parallelism
rayon = "1.11"

# Logging
env_logger = "0.11"
log = "0.4"

[profile.release]
opt-level = "z" # Optimize for size
lto = true # Link-time optimization
codegen-units = 1 # Single codegen unit for better optimization
panic = "abort" # Smaller binary
strip = true # Strip symbols
