load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test", "rust_doc", "rust_clippy")
load("@crates//:defs.bzl", "aliases", "all_crate_deps")

package(default_visibility = ["//visibility:public"])

# Export Cargo.toml for reference
exports_files(["Cargo.toml"])

# icloud library crate
rust_library(
    name = "icloud",
    srcs = glob(["src/**/*.rs"]),
    crate_root = "src/lib.rs",
    edition = "2024",
    crate_features = ["brctl"],
    aliases = aliases(),
    proc_macro_deps = all_crate_deps(proc_macro = True),
    deps = [
        "@crates//:serde",
        "@crates//:thiserror",
    ],
)

# Unit tests
rust_test(
    name = "icloud_test",
    crate = ":icloud",
    deps = [
        "@crates//:tempfile",
    ],
)

# Clippy linting
rust_clippy(
    name = "icloud_clippy",
    deps = [":icloud"],
)

# Documentation
rust_doc(
    name = "icloud_doc",
    crate = ":icloud",
)
