[package]
name = "manifest"
version = "0.1.0"
authors = ["Alberto Cavalcante"]
categories = ["filesystem", "database"]
edition = "2024"
keywords = ["manifest", "hash", "duplicates", "storage", "blake3"]
license = "MIT"
rust-version = "1.85"
description = "Content hashing and duplicate detection for storage volumes"

[dependencies]
# Content hashing
blake3 = "1"

# Database
rusqlite = { version = "0.35", features = ["bundled"] }

# Filesystem traversal
walkdir = "2"

# Date/time
chrono = "0.4"

# Error handling
thiserror = "2"

# Serialization (for types)
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
