[package]
name = "termkit"
version = "0.1.0"
authors = ["Alberto Cavalcante"]
categories = ["command-line-interface", "development-tools"]
edition = "2024"
keywords = ["cli", "terminal", "tui", "progress", "colors"]
license = "MIT"
rust-version = "1.90"
description = "Terminal UI toolkit for CLI applications - messages, progress, formatting"

[dependencies]
# Terminal colors
colored = "3"

# Progress indicators
indicatif = "0.18"

[dev-dependencies]
